--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "## プロジェクト目的",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "migrate": "knex migrate:latest"
+    "test": "mocha spec --exit",
+    "migrate": "knex migrate:latest",
+    "start": "node ./src/index.js",
+    "seed": "knex seed:run"
   },
   "repository": {
     "type": "git",
@@ -19,6 +21,7 @@
   "homepage": "https://github.com/r3-takahashi/to-do-app#readme",
   "devDependencies": {
     "chai": "^4.3.7",
+    "chai-http": "^4.3.0",
     "eslint": "^8.27.0",
     "mocha": "^10.1.0",
     "nodemon": "^2.0.20",
